--- a/index.html
+++ b/index.html
@@ -16,6 +16,33 @@
   <p><em>paragrafo</em></p>
   <p><strong>paragrafo</strong></p>
 
+  <table>
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>numero</th>
+        <th>outro numero</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+      </tr>
+    </tbody>
+  </table>
+
   <hr>
   <input type="text" placeholder="nome">
   <br>
